Issue 330: moved to clojure 1.2rc2